--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/src/assets/background/16x16.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Lancelot&family=Pixelify+Sans&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <title></title>
   </head>
