--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/src/assets/background/16x16.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&family=DM+Sans:opsz,wght@9..40,100&family=Titillium+Web:wght@200&display=swap" rel="stylesheet">
     <title></title>
   </head>
   <body>
